Fixed spacing in board layout & added support for drag event in Firefox

--- a/css/slidingPuzzle.css
+++ b/css/slidingPuzzle.css
@@ -51,11 +51,24 @@ h1{
     font-size: 100px;
     width: 100%;
     height: 100%;
+    text-align: center;
 }
 
 .col-lg-4{
     width: 22.5%;
     height: 22.5%;
+    margin:0;
+    padding: 0;
+}
+
+.col-md-4{
+    margin:0;
+    padding: 0;
+}
+
+.col-sm-4{
+    margin:0;
+    padding: 0;
 }
 
 #lastBtn
